feat: detectar e tratar outliers de adult

--- a/preprocess_data_adult.ipynb
+++ b/preprocess_data_adult.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "20bc3f05",
    "metadata": {},
    "outputs": [
@@ -35,6 +35,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "df = pd.read_csv(\"data/raw/adult.csv\")\n",
     "print(df.head())"
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "f62ecc8e",
    "metadata": {},
    "outputs": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "dbbb0206",
    "metadata": {},
    "outputs": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "3fec763f",
    "metadata": {},
    "outputs": [
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "08e37b05",
    "metadata": {},
    "outputs": [],
@@ -136,6 +138,96 @@
     "df_sem_nulos = df.dropna()\n",
     "\n",
     "df_menos_colunas = df.dropna(axis=1, thresh=0.5*len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6ae6b09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_preenchido = df.fillna(df.median(numeric_only=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8e8b2897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.select_dtypes(include=[\"object\"]).columns:\n",
+    "    df_preenchido[col] = df_preenchido[col].fillna(df[col].mode()[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "826676a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_preenchido.to_csv(\"data/processed/adult_clean.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7745307d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Quantidade de outliers detectados por coluna:\n",
+      "age: 216\n",
+      "fnlwgt: 1453\n",
+      "educational-num: 1794\n",
+      "capital-gain: 4035\n",
+      "capital-loss: 2282\n",
+      "hours-per-week: 13496\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Erlanny Rodrigues\\AppData\\Local\\Temp\\ipykernel_3968\\1842969414.py:25: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '178144.5' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  df_tratado.loc[(df_tratado[col] < limite_inferior) | (df_tratado[col] > limite_superior), col] = mediana\n"
+     ]
+    }
+   ],
+   "source": [
+    "def detectar_outliers(col):\n",
+    "    Q1 = col.quantile(0.25)\n",
+    "    Q3 = col.quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    limite_inferior = Q1 - 1.5 * IQR\n",
+    "    limite_superior = Q3 + 1.5 * IQR\n",
+    "    return col[(col < limite_inferior) | (col > limite_superior)]\n",
+    "\n",
+    "outliers = {}\n",
+    "for col in df_preenchido.select_dtypes(include=[np.number]).columns:\n",
+    "    outliers[col] = detectar_outliers(df_preenchido[col])\n",
+    "\n",
+    "print(\"\\nQuantidade de outliers detectados por coluna:\")\n",
+    "for col, vals in outliers.items():\n",
+    "    print(f\"{col}: {len(vals)}\")\n",
+    "\n",
+    "df_tratado = df_preenchido.copy()\n",
+    "for col in df_tratado.select_dtypes(include=[np.number]).columns:\n",
+    "    Q1 = df_tratado[col].quantile(0.25)\n",
+    "    Q3 = df_tratado[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    limite_inferior = Q1 - 1.5 * IQR\n",
+    "    limite_superior = Q3 + 1.5 * IQR\n",
+    "    mediana = df_tratado[col].median()\n",
+    "    df_tratado.loc[(df_tratado[col] < limite_inferior) | (df_tratado[col] > limite_superior), col] = mediana\n",
+    "\n",
+    "df_tratado.to_csv(\"data/processed/adult_final.csv\", index=False)"
    ]
   }
  ],
