--- a/preprocess_data_adult.ipynb
+++ b/preprocess_data_adult.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "20bc3f05",
    "metadata": {},
    "outputs": [
@@ -37,6 +37,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "\n",
     "df = pd.read_csv(\"data/raw/adult.csv\")\n",
     "print(df.head())"
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "f62ecc8e",
    "metadata": {},
    "outputs": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "dbbb0206",
    "metadata": {},
    "outputs": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "3fec763f",
    "metadata": {},
    "outputs": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "08e37b05",
    "metadata": {},
    "outputs": [],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "6ae6b09e",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "8e8b2897",
    "metadata": {},
    "outputs": [],
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "826676a8",
    "metadata": {},
    "outputs": [],
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "7745307d",
    "metadata": {},
    "outputs": [
@@ -195,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Erlanny Rodrigues\\AppData\\Local\\Temp\\ipykernel_3968\\1842969414.py:25: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '178144.5' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\Erlanny Rodrigues\\AppData\\Local\\Temp\\ipykernel_14916\\1842969414.py:25: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '178144.5' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  df_tratado.loc[(df_tratado[col] < limite_inferior) | (df_tratado[col] > limite_superior), col] = mediana\n"
      ]
     }
@@ -228,6 +229,179 @@
     "    df_tratado.loc[(df_tratado[col] < limite_inferior) | (df_tratado[col] > limite_superior), col] = mediana\n",
     "\n",
     "df_tratado.to_csv(\"data/processed/adult_final.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a9bcff73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de dados antes da conversão:\n",
+      " age                  int64\n",
+      "workclass           object\n",
+      "fnlwgt             float64\n",
+      "education           object\n",
+      "educational-num      int64\n",
+      "marital-status      object\n",
+      "occupation          object\n",
+      "relationship        object\n",
+      "race                object\n",
+      "gender              object\n",
+      "capital-gain         int64\n",
+      "capital-loss         int64\n",
+      "hours-per-week       int64\n",
+      "native-country      object\n",
+      "income              object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/processed/adult_final.csv\")\n",
+    "\n",
+    "print(\"Tipos de dados antes da conversão:\\n\", df.dtypes)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6f9b440f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de dados antes da conversão:\n",
+      " age                  int64\n",
+      "workclass           object\n",
+      "fnlwgt             float64\n",
+      "education           object\n",
+      "educational-num      int64\n",
+      "marital-status      object\n",
+      "occupation          object\n",
+      "relationship        object\n",
+      "race                object\n",
+      "gender              object\n",
+      "capital-gain         int64\n",
+      "capital-loss         int64\n",
+      "hours-per-week       int64\n",
+      "native-country      object\n",
+      "income              object\n",
+      "dtype: object\n",
+      "Colunas categóricas detectadas: ['workclass', 'education', 'marital-status', 'occupation', 'relationship', 'race', 'gender', 'native-country', 'income']\n",
+      "\n",
+      "Dimensões após encoding: (48842, 101)\n",
+      "Tipos de dados depois da conversão:\n",
+      " age                                 int64\n",
+      "fnlwgt                            float64\n",
+      "educational-num                     int64\n",
+      "capital-gain                        int64\n",
+      "capital-loss                        int64\n",
+      "                                   ...   \n",
+      "native-country_Trinadad&Tobago       bool\n",
+      "native-country_United-States         bool\n",
+      "native-country_Vietnam               bool\n",
+      "native-country_Yugoslavia            bool\n",
+      "income_>50K                          bool\n",
+      "Length: 101, dtype: object\n",
+      "\n",
+      "Dataset convertido salvo em data/processed/adult_ml_ready.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/processed/adult_final.csv\")\n",
+    "\n",
+    "print(\"Tipos de dados antes da conversão:\\n\", df.dtypes)\n",
+    "\n",
+    "\n",
+    "if \"education\" in df.columns and \"education-num\" in df.columns:\n",
+    "    df = df.drop(columns=[\"education\"])\n",
+    "\n",
+    "\n",
+    "cols_categoricas = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "print(\"Colunas categóricas detectadas:\", cols_categoricas)\n",
+    "\n",
+    "# Aplicar One-Hot Encoding\n",
+    "df_numerico = pd.get_dummies(df, columns=cols_categoricas, drop_first=True)\n",
+    "\n",
+    "print(\"\\nDimensões após encoding:\", df_numerico.shape)\n",
+    "print(\"Tipos de dados depois da conversão:\\n\", df_numerico.dtypes)\n",
+    "\n",
+    "df_numerico.to_csv(\"data/processed/adult_ml_ready.csv\", index=False)\n",
+    "print(\"\\nDataset convertido salvo em data/processed/adult_ml_ready.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4d393f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes da normalização:\n",
+      "                   count           mean           std      min       25%  \\\n",
+      "age              48842.0      38.437247     13.375595     17.0      28.0   \n",
+      "fnlwgt           48842.0  179641.816214  86321.206519  12285.0  117550.5   \n",
+      "educational-num  48842.0      10.324106      2.198878      5.0       9.0   \n",
+      "capital-gain     48842.0       0.000000      0.000000      0.0       0.0   \n",
+      "capital-loss     48842.0       0.000000      0.000000      0.0       0.0   \n",
+      "\n",
+      "                       50%       75%       max  \n",
+      "age                  37.00      47.0      78.0  \n",
+      "fnlwgt           178143.25  226891.0  417668.0  \n",
+      "educational-num      10.00      12.0      16.0  \n",
+      "capital-gain          0.00       0.0       0.0  \n",
+      "capital-loss          0.00       0.0       0.0  \n",
+      "\n",
+      "Datasets salvos:\n",
+      "StandardScaler: data/processed/adult_ml_standard.csv\n",
+      "MinMaxScaler:   data/processed/adult_ml_minmax.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/processed/adult_ml_ready.csv\")\n",
+    "\n",
+    "print(\"Antes da normalização:\")\n",
+    "print(df.describe().T.head())\n",
+    "\n",
+    "\n",
+    "y = df[\"income_>50K\"] if \"income_>50K\" in df.columns else None\n",
+    "X = df.drop(columns=[\"income_>50K\"]) if \"income_>50K\" in df.columns else df\n",
+    "\n",
+    "\n",
+    "scaler_std = StandardScaler()\n",
+    "X_std = pd.DataFrame(scaler_std.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "\n",
+    "scaler_mm = MinMaxScaler()\n",
+    "X_mm = pd.DataFrame(scaler_mm.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "\n",
+    "if y is not None:\n",
+    "    df_std = pd.concat([X_std, y], axis=1)\n",
+    "    df_mm = pd.concat([X_mm, y], axis=1)\n",
+    "else:\n",
+    "    df_std, df_mm = X_std, X_mm\n",
+    "\n",
+    "\n",
+    "df_std.to_csv(\"data/processed/adult_ml_standard.csv\", index=False)\n",
+    "df_mm.to_csv(\"data/processed/adult_ml_minmax.csv\", index=False)\n",
+    "\n",
+    "print(\"\\nDatasets salvos:\")\n",
+    "print(\"StandardScaler: data/processed/adult_ml_standard.csv\")\n",
+    "print(\"MinMaxScaler:   data/processed/adult_ml_minmax.csv\")"
    ]
   }
  ],
