feat: trata valores ausentes, outliers e dimensionar conjunto de dados

--- a/preprocess_data_titanic.ipynb
+++ b/preprocess_data_titanic.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "20bc3f05",
+   "execution_count": 44,
+   "id": "39b5415b-f2d9-4142-bd69-b5422ad93aeb",
    "metadata": {},
    "outputs": [
     {
@@ -29,27 +29,7 @@
       "1      0          PC 17599  71.2833   C85        C  \n",
       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
       "3      0            113803  53.1000  C123        S  \n",
-      "4      0            373450   8.0500   NaN        S  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"data/raw/Titanic-Dataset.csv\")\n",
-    "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f62ecc8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4      0            373450   8.0500   NaN        S  \n",
       "PassengerId      0\n",
       "Survived         0\n",
       "Pclass           0\n",
@@ -62,24 +42,7 @@
       "Fare             0\n",
       "Cabin          687\n",
       "Embarked         2\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.isnull().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "dbbb0206",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "dtype: int64\n",
       "PassengerId     0.000000\n",
       "Survived        0.000000\n",
       "Pclass          0.000000\n",
@@ -92,24 +55,7 @@
       "Fare            0.000000\n",
       "Cabin          77.104377\n",
       "Embarked        0.224467\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.isnull().mean() * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3fec763f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "dtype: float64\n",
       "   PassengerId  Survived  Pclass                            Name     Sex  \\\n",
       "0            1         0       3         Braund, Mr. Owen Harris    male   \n",
       "2            3         1       3          Heikkinen, Miss. Laina  female   \n",
@@ -127,25 +73,223 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "\n",
+    "# 1) Carregar dataset Titanic\n",
+    "df = pd.read_csv(\"data/raw/titanic.csv\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# 2) Checar valores nulos\n",
+    "print(df.isnull().sum())\n",
+    "print(df.isnull().mean() * 100)\n",
     "print(df[df.isnull().any(axis=1)].head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "08e37b05",
+   "execution_count": 48,
+   "id": "64c0068c-23a7-425f-8b70-e27e2ebd39ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sem_nulos = df.dropna()\n",
+    "# Remover colunas com mais de 50% de nulos\n",
+    "df_menos_colunas = df.dropna(axis=1, thresh=0.5*len(df))\n",
     "\n",
-    "df_menos_colunas = df.dropna(axis=1, thresh=0.5*len(df))"
+    "# Preencher numéricos com mediana\n",
+    "df_preenchido = df.fillna(df.median(numeric_only=True))\n",
+    "df_preenchido['Age'] = df_preenchido['Age'].astype(int)\n",
+    "\n",
+    "# Preencher categóricos com moda\n",
+    "for col in df.select_dtypes(include=[\"object\"]).columns:\n",
+    "    df_preenchido[col] = df_preenchido[col].fillna(df[col].mode()[0])\n",
+    "\n",
+    "df_preenchido.to_csv(\"data/processed/titanic_clean.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "405e50ae-971f-4092-bb4a-67653480b676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Quantidade de outliers detectados por coluna:\n",
+      "PassengerId: 0\n",
+      "Survived: 0\n",
+      "Pclass: 0\n",
+      "Age: 66\n",
+      "SibSp: 46\n",
+      "Parch: 213\n",
+      "Fare: 116\n"
+     ]
+    }
+   ],
+   "source": [
+    "def detectar_outliers(col):\n",
+    "    Q1 = col.quantile(0.25)\n",
+    "    Q3 = col.quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    limite_inferior = Q1 - 1.5 * IQR\n",
+    "    limite_superior = Q3 + 1.5 * IQR\n",
+    "    return col[(col < limite_inferior) | (col > limite_superior)]\n",
+    "\n",
+    "outliers = {}\n",
+    "for col in df_preenchido.select_dtypes(include=[np.number]).columns:\n",
+    "    outliers[col] = detectar_outliers(df_preenchido[col])\n",
+    "\n",
+    "print(\"\\nQuantidade de outliers detectados por coluna:\")\n",
+    "for col, vals in outliers.items():\n",
+    "    print(f\"{col}: {len(vals)}\")\n",
+    "\n",
+    "# Substituir outliers pela mediana\n",
+    "df_tratado = df_preenchido.copy()\n",
+    "for col in df_tratado.select_dtypes(include=[np.number]).columns:\n",
+    "    Q1 = df_tratado[col].quantile(0.25)\n",
+    "    Q3 = df_tratado[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    limite_inferior = Q1 - 1.5 * IQR\n",
+    "    limite_superior = Q3 + 1.5 * IQR\n",
+    "    mediana = df_tratado[col].median()\n",
+    "    df_tratado.loc[(df_tratado[col] < limite_inferior) | (df_tratado[col] > limite_superior), col] = mediana\n",
+    "\n",
+    "df_tratado.to_csv(\"data/processed/titanic_final.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "19d9fdba-954b-4d4c-b988-2f6a04f71bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de dados antes da conversão:\n",
+      " PassengerId      int64\n",
+      "Survived         int64\n",
+      "Pclass           int64\n",
+      "Name            object\n",
+      "Sex             object\n",
+      "Age              int64\n",
+      "SibSp            int64\n",
+      "Parch            int64\n",
+      "Ticket          object\n",
+      "Fare           float64\n",
+      "Cabin           object\n",
+      "Embarked        object\n",
+      "dtype: object\n",
+      "Colunas categóricas detectadas: ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n",
+      "\n",
+      "Dimensões após encoding: (891, 1726)\n",
+      "Tipos de dados depois da conversão:\n",
+      " PassengerId    int64\n",
+      "Survived       int64\n",
+      "Pclass         int64\n",
+      "Age            int64\n",
+      "SibSp          int64\n",
+      "               ...  \n",
+      "Cabin_F4        bool\n",
+      "Cabin_G6        bool\n",
+      "Cabin_T         bool\n",
+      "Embarked_Q      bool\n",
+      "Embarked_S      bool\n",
+      "Length: 1726, dtype: object\n",
+      "\n",
+      "Dataset convertido salvo em data/processed/titanic_ml_ready.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/processed/titanic_final.csv\")\n",
+    "\n",
+    "print(\"Tipos de dados antes da conversão:\\n\", df.dtypes)\n",
+    "\n",
+    "cols_categoricas = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "print(\"Colunas categóricas detectadas:\", cols_categoricas)\n",
+    "\n",
+    "# Aplicar One-Hot Encoding\n",
+    "df_numerico = pd.get_dummies(df, columns=cols_categoricas, drop_first=True)\n",
+    "\n",
+    "print(\"\\nDimensões após encoding:\", df_numerico.shape)\n",
+    "print(\"Tipos de dados depois da conversão:\\n\", df_numerico.dtypes)\n",
+    "\n",
+    "df_numerico.to_csv(\"data/processed/titanic_ml_ready.csv\", index=False)\n",
+    "print(\"\\nDataset convertido salvo em data/processed/titanic_ml_ready.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e55af500-ba55-4e78-96a3-1e645eaac235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes da normalização:\n",
+      "             count        mean         std  min    25%    50%    75%    max\n",
+      "PassengerId  891.0  446.000000  257.353842  1.0  223.5  446.0  668.5  891.0\n",
+      "Survived     891.0    0.383838    0.486592  0.0    0.0    0.0    1.0    1.0\n",
+      "Pclass       891.0    2.308642    0.836071  1.0    2.0    3.0    3.0    3.0\n",
+      "Age          891.0   28.468013    9.790722  3.0   23.5   28.0   33.0   54.0\n",
+      "SibSp        891.0    0.297419    0.521648  0.0    0.0    0.0    1.0    2.0\n",
+      "\n",
+      "Datasets salvos:\n",
+      "StandardScaler: data/processed/titanic_ml_standard.csv\n",
+      "MinMaxScaler:   data/processed/titanic_ml_minmax.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/processed/titanic_ml_ready.csv\")\n",
+    "\n",
+    "print(\"Antes da normalização:\")\n",
+    "print(df.describe().T.head())\n",
+    "\n",
+    "y = df[\"Survived\"] if \"Survived\" in df.columns else None\n",
+    "X = df.drop(columns=[\"Survived\"]) if \"Survived\" in df.columns else df\n",
+    "\n",
+    "scaler_std = StandardScaler()\n",
+    "X_std = pd.DataFrame(scaler_std.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "scaler_mm = MinMaxScaler()\n",
+    "X_mm = pd.DataFrame(scaler_mm.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "if y is not None:\n",
+    "    df_std = pd.concat([X_std, y], axis=1)\n",
+    "    df_mm = pd.concat([X_mm, y], axis=1)\n",
+    "else:\n",
+    "    df_std, df_mm = X_std, X_mm\n",
+    "\n",
+    "df_std.to_csv(\"data/processed/titanic_ml_standard.csv\", index=False)\n",
+    "df_mm.to_csv(\"data/processed/titanic_ml_minmax.csv\", index=False)\n",
+    "\n",
+    "print(\"\\nDatasets salvos:\")\n",
+    "print(\"StandardScaler: data/processed/titanic_ml_standard.csv\")\n",
+    "print(\"MinMaxScaler:   data/processed/titanic_ml_minmax.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d4f205-a1d5-4e95-9187-eeeb02e59b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
