feat: visualização dos dados

--- a/preprocess_data_titanic.ipynb
+++ b/preprocess_data_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "39b5415b-f2d9-4142-bd69-b5422ad93aeb",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "64c0068c-23a7-425f-8b70-e27e2ebd39ac",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "405e50ae-971f-4092-bb4a-67653480b676",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "19d9fdba-954b-4d4c-b988-2f6a04f71bb1",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tipos de dados antes da conversão:\n",
+      "Tipos de dados antes da conversão:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " PassengerId      int64\n",
       "Survived         int64\n",
       "Pclass           int64\n",
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "e55af500-ba55-4e78-96a3-1e645eaac235",
    "metadata": {},
    "outputs": [
