--- a/atv-2/notebooks/etapa4_5_6r.ipynb
+++ b/atv-2/notebooks/etapa4_5_6r.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "cab7c872-b7d1-4138-95b5-084c6e764b03",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,6 @@
    ],
    "source": [
     "# Célula 9 - PCA 2D (scatter) - usa X_train_scaled e y_train\n",
-    "# Se rfecv / selected_features existirem, usa as features selecionadas; caso contrário, usa todas as features.\n",
     "\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "256052cf-850e-49f4-9fb9-9bb73eada5f2",
    "metadata": {},
    "outputs": [
@@ -409,7 +408,7 @@
     }
    ],
    "source": [
-    "# Célula 11 (corrigida) - Visualizar coeficientes do Lasso (Top 30) sem gerar FutureWarning\n",
+    "# Célula 11 - Visualizar coeficientes do Lasso (Top 30) sem gerar FutureWarning\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "29801312-bbf7-4f4d-aea1-c4771d5f0079",
    "metadata": {},
    "outputs": [
@@ -512,19 +511,12 @@
     }
    ],
    "source": [
-    "# Célula 12 (corrigida) - Comparação RFE x Lasso: contagens + heatmap legível p/ Top-K\n",
+    "# Célula 12 - Comparação RFE x Lasso: contagens + heatmap legível p/ Top-K\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "# ========== 1) Garantir variáveis essenciais ==========\n",
-    "# selected_features  <- lista vinda do RFECV/RFE\n",
-    "# selected_features_lasso <- lista vinda do Lasso\n",
-    "# imp_series <- pd.Series com importâncias do Lasso (decrescente, index = feature names)\n",
-    "\n",
-    "# tentar extrair selected_features do rfecv se não estiver definida\n",
     "try:\n",
     "    selected_features\n",
     "except NameError:\n",
@@ -556,7 +548,7 @@
     "        # fallback: zero importances\n",
     "        imp_series = pd.Series(0, index=list(X_train.columns))\n",
     "\n",
-    "# ========== 2) DataFrame comparativo (completo) ==========\n",
+    "\n",
     "all_feats = list(X_train.columns)\n",
     "comp_df = pd.DataFrame({\n",
     "    \"feature\": all_feats,\n",
@@ -581,7 +573,7 @@
     "comp_df.to_csv(\"../results/compare_rfe_lasso.csv\", index=False)\n",
     "print(\"CSV salvo em ../results/compare_rfe_lasso.csv\")\n",
     "\n",
-    "# ========== 3) Gráfico de contagem - RFE / Lasso / Interseção ==========\n",
+    "\n",
     "plt.figure(figsize=(6,4))\n",
     "vals = [n_rfe, n_lasso, n_common]\n",
     "labels = [\"RFE\", \"Lasso\", \"Interseção\"]\n",
@@ -593,13 +585,9 @@
     "plt.ylabel(\"Número de atributos\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"../results/compare_counts.png\", bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "# ========== 4) Heatmap legível para TOP_K features por Lasso importance ==========\n",
-    "TOP_K = 40  # ajuste se desejar (20, 30, 50...)\n",
-    "# selecionar top features por importância Lasso\n",
+    "plt.s\n",
+    "TOP_K = 40 \n",
     "if imp_series.sum() == 0:\n",
-    "    # fallback: usar features com maior soma entre seleções (freq)\n",
     "    rank_df = comp_df.copy()\n",
     "    rank_df[\"sum_sel\"] = rank_df[\"selected_rfe\"] + rank_df[\"selected_lasso\"]\n",
     "    top_feats = rank_df.sort_values([\"sum_sel\",\"lasso_importance\"], ascending=[False, False])[\"feature\"].iloc[:TOP_K].tolist()\n",
@@ -621,7 +609,6 @@
     "plt.savefig(\"../results/compare_top_features_heatmap.png\", bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "# ========== 5) Pequena amostra textual para relatório ==========\n",
     "common_list = sorted(list(set_rfe.intersection(set_lasso)))\n",
     "only_rfe = sorted(list(set_rfe.difference(set_lasso)))\n",
     "only_lasso = sorted(list(set_lasso.difference(set_rfe)))\n",
